# stratum

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  capacity.toml.example  docker-compose.yml  memory-rules.md  memory-user-guide.md  pyproject.toml
.claude/: launch.json
architecture/: anforderungsprofil-desktop.md  dev-setup.md  interfaces-und-zugang.md  roadmap-schritt-1.md  roadmap-schritt-2.md  roadmap-schritt-3.md  roadmap-schritt-4.md  roadmap-schritt-5.md  roadmap-uebersicht.md  startkonfiguration.md  stratum-beschreibung.md  technische-grundentscheidungen.md
core/: apply_gate.py  architect_policy.py  auth.py  bundling.py  canary.py  capacity.py  change_classify.py  classifier.py  cloud_adapter.py  cloud_egress.py  cost_store.py  db.py  detector.py  diff_extract.py  escalation.py  expansion.py  gate_policy.py  goal_suggest.py  graph.py  impact_expand.py  ingest.py  json_extract.py  lint_gate.py  llm_parser.py  manual_adapter.py  metrics.py  node_prep.py  ollama_adapter.py  openai_sender.py  patch_apply.py  plan_architect.py  plan_artifact.py  plan_format.py  plan_metadata.py  planner.py  provenance_stamp.py  queue.py  redaction_gate.py  regression.py  rename_expand.py  (+18 more)
eval/: regression_tasks.toml  run_regression.py
interfaces/: __init__.py
memory/: INDEX.md  MANIFEST.md  START.md  _overview.md  arbeitsplan.md  arch_core.md  arch_pfadwahl.md  arch_rekursion.md  architecture.md  constraints.md  env_core.md  env_portabilitaet.md  feedback_edit-duplikate.md  feedback_ps51-pitfalls.md  idx_content-schema.md  idx_core.md  idx_gdscript.md  idx_js-ts.md  idx_sprachagnostik.md  log-archiv-schritt-1.md  log-archiv-schritt-2.md  log-archiv-schritt-3.md  log.md  memory_start.md  meta_overview.md  method_tdd.md  modell-cpu-profil.md  modell-vram-matrix.md  modell_cpu-profil.md  modell_vram-matrix.md  ops_abdeckungstests.md  ops_docker-server.md  ops_dogfooding-smoketest.md  ops_n1-queries.md  ops_prob-dogfooding.md  ops_rekursionstests.md  ops_rest-curl.md  ops_sync-script.md  ops_sync-workflow.md  ops_wsl.md  (+22 more)
memory-archiv/: log-archiv-schritt-4.md  log-archiv-schritt-5.md  log-langform-phase4.md
migrations/: 0001.initial-schema.rollback.sql  0001.initial-schema.sql  0002.queue.sql  0003.model-metrics.rollback.sql  0003.model-metrics.sql  0004.cloud-costs.rollback.sql  0004.cloud-costs.sql  0005.ownership.rollback.sql  0005.ownership.sql  0006.graph-edges.rollback.sql  0006.graph-edges.sql  0007.stale-flag.rollback.sql  0007.stale-flag.sql  0008.pgvector.sql  0009.metrics-task-type.rollback.sql  0009.metrics-task-type.sql  0010.queue-capability.rollback.sql  0010.queue-capability.sql  0011.rename-verify-lint-gate.rollback.sql  0011.rename-verify-lint-gate.sql  0012.queue-superseded.rollback.sql  0012.queue-superseded.sql  0013.queue-cancelled.rollback.sql  0013.queue-cancelled.sql
schemas/: events.schema.json  provenance.schema.json  result_det.schema.json  result_prob.schema.json
scripts/: README.md  check.sh  setup.ps1  setup.sh
(+154 files in other folders)
