# Python-Kern: Abhaengigkeiten fuer den Dev-Start (bis N2).
# Versionen sind vorerst Mindeststaende; bei I-1.0 exakt pinnen.
# Verwaltung via uv (setup.sh ruft `uv sync`).

[project]
name = "stratum"
version = "0.0.0"
description = "Schichtweiser Coding Agent: det vor lokal vor Cloud."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "watchdog>=4.0",
    "httpx>=0.27",
    "yoyo-migrations>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "datamodel-code-generator>=0.25",
]

# Workspace ist (noch) kein installierbares Paket -> uv installiert nur die
# Abhaengigkeiten, ohne den Projektbaum zu bauen.
[tool.uv]
package = false
