# Python-Kern: Abhaengigkeiten fuer den Dev-Start (bis N2).
# Versionen sind vorerst Mindeststaende; bei I-1.0 exakt pinnen.
# Verwaltung via uv (setup.sh ruft `uv sync`).

[project]
name = "stratum"
version = "0.0.0"
description = "Schichtweiser Coding Agent: det vor lokal vor Cloud."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "watchdog>=4.0",
    "httpx>=0.27",
    "yoyo-migrations>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "datamodel-code-generator>=0.25",
    "ruff>=0.15",
]
# Cloud-Eskalation (Schicht S3, opt-in). Baseline-Anbieter Anthropic; der
# Adapter (core/cloud_adapter.py, I-3.1) importiert das SDK erst lazy im
# AnthropicSender, die det-Suite laeuft ohne. Realer Egress erst nach I-3.4.
cloud = [
    "anthropic>=0.40",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

# Workspace ist (noch) kein installierbares Paket -> uv installiert nur die
# Abhaengigkeiten, ohne den Projektbaum zu bauen.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# Lint-/Format-Gate (I-1.12). Reines Dev-/CI-Gate fuer Stratums EIGENEN Code,
# kein Produktfeature. Laeuft ueber den ganzen Baum (make lint = ruff check .),
# damit kuenftiger Python-Code (z.B. interfaces/web) automatisch erfasst wird.
[tool.ruff]
line-length = 88
target-version = "py312"
# Generierter Code (haengt am Drift-Gate, codegen schreibt Single-Quotes ->
# ruff format darf ihn nicht reformatieren) und absichtlich pathologische
# Test-Fixtures (kaputte Syntax, import *, ungenutzte Imports = Testdaten)
# bleiben aussen vor. extend-exclude behaelt ruffs Defaults (.venv etc.).
extend-exclude = ["core/models", "tests/fixtures"]

[tool.ruff.lint]
# Minimal: pyflakes, pycodestyle-Errors, isort, pyupgrade, bugbear.
select = ["F", "E", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.format]
# Deckt sich mit .editorconfig/.gitattributes (LF erzwungen).
line-ending = "lf"
